--- a/tutorial.html
+++ b/tutorial.html
@@ -58,6 +58,7 @@
 </ul>
 </nav>
 </header> <div class=" wrap container-fluid" role="document">
+
 <div class="row content">
 <main class="main">
 <div class="page-header">
@@ -80,120 +81,50 @@
 </div>
 <div class="container resources-grid">
 <div class="row">
-<div class="col-md-4">
-<div class="col-12 filter-content-types">
-<label>Whitepaper</label>
-<ul>
-<li><a href="">All forms of content</a></li>
-<li><a href="">Blog</a></li>
-<li><a href="">Whitepaper</a></li>
-<li><a href="">Webinar</a></li>
-<li><a href="">Case study</a></li>
 
-<!--
-<li><a href="https://www.rydoo.com/resources/">All forms of content</a></li>
-<li><a href="https://www.rydoo.com/resources/blog/">Blog</a></li>
-<li><a href="https://www.rydoo.com/resources/whitepaper/">Whitepaper</a></li>
-<li><a href="https://www.rydoo.com/resources/webinar/">Webinar</a></li>
-<li><a href="https://www.rydoo.com/resources/case-study/">Case study</a></li>
--->
-</ul>
-</div>
-<div class="col-12 topics">
-<a class="active" href="">All topics</a>
-<a class="" href="">Business travel</a>
-<a class="" href="">Controlling &amp; approving expenses</a>
-<a class="" href="">Life at Rydoo</a>
-<a class="" href="">Local tax compliance</a>
-<a class="" href="">Product Updates</a>
-<a class="" href="">T&amp;E for Dummies</a>
-<a class="" href="">The New Normal</a>
-<a class="" href="">Travel &amp; expense policy</a>
-<a class="" href="">Other</a>
-<!--
-<a class="active" href="https://www.rydoo.com/resources/">All topics</a>
-<a class="" href="https://www.rydoo.com/resources/whitepaper/business-travel/">Business travel</a>
-<a class="" href="https://www.rydoo.com/resources/whitepaper/controlling-and-approving-expenses/">Controlling &amp; approving expenses</a>
-<a class="" href="https://www.rydoo.com/resources/whitepaper/life-at-rydoo/">Life at Rydoo</a>
-<a class="" href="https://www.rydoo.com/resources/whitepaper/local-tax-compliance/">Local tax compliance</a>
-<a class="" href="https://www.rydoo.com/resources/whitepaper/product-updates/">Product Updates</a>
-<a class="" href="https://www.rydoo.com/resources/whitepaper/t-and-e-for-dummies/">T&amp;E for Dummies</a>
-<a class="" href="https://www.rydoo.com/resources/whitepaper/the-new-normal/">The New Normal</a>
-<a class="" href="https://www.rydoo.com/resources/whitepaper/travel-expense-policy/">Travel &amp; expense policy</a>
-<a class="" href="https://www.rydoo.com/resources/whitepaper/other/">Other</a>
--->
-
-</div>
-</div>
-<div class="col-md-4 blog-tile whitepapers">
-<a href="tutorial-child.html">
-<div class=" image-container">
-<div class="img-cover" style="background-image: url(https://www.rydoo.com/app/uploads/2021/05/Rydoo_WPmockup_Compliance2021EN-600x400.png)"></div>
-</div>
-<div class="content">
-<div class="tag">Whitepaper</div> <h4 class="with-min-height"> The Importance of Expense Compliance</h4>
-<div class="article-info">
- Other </div>
-<p>Your no.1 guide to internal and external compliance. Get a comprehensive view of how a digital expense solution alleviates a lot of the (non-)compliancy issues.</p>
-</div>
-</a>
-</div> 
-<div class="col-md-4 blog-tile whitepapers">
-<a href="tutorial-child.html">
-<div class=" image-container">
-<div class="img-cover" style="background-image: url(https://www.rydoo.com/app/uploads/2021/02/3-WAYS-600x400.jpg)"></div>
-</div>
-<div class="content">
-<div class="tag">Whitepaper</div> <h4 class="with-min-height"> Research Report: The state of Expense Management 2021</h4>
-<div class="article-info">
-Other </div>
-<p>Get a comprehensive view of expense management and benchmark yourself against other comparable companies.</p>
-</div>
-</a>
-</div> 
 <div class="col-md-4 blog-tile
             whitepapers">
-<a href="tutorial-child.html">
+<a href="tutorial-child-1.html">
 <div class=" image-container">
 <div class="img-cover" style="background-image: url(https://www.rydoo.com/app/uploads/2020/10/1-600x400.png)"></div>
 </div>
 <div class="content">
-<div class="tag">Whitepaper</div> <h4 class="with-min-height"> Working in Harmony: Creating a Technology Stack For Your Finance Team</h4>
+<div class="tag">tutorial</div> <h4 class="with-min-height"> Vietnamese: Hướng dẫn đăng ký tài khoản doanh nghiệp trên Gopy Portal</h4>
 <div class="article-info">
-Other </div>
-<p>The #1 guide to create a technology stack fit for your finance team.</p>
+ Sign up </div>
+<p>Vietnamese: Xem cách đăng ký tài khoản doanh nghiệp trên Gopy Portal tại đây.</p>
+</div>
+</a>
+</div>
+<div class="col-md-4 blog-tile whitepapers">
+<a href="tutorial-child-2.html">
+<div class=" image-container">
+<div class="img-cover" style="background-image: url(https://www.rydoo.com/app/uploads/2021/02/3-WAYS-600x400.jpg)"></div>
+</div>
+
+<div class="content">
+<div class="tag">tutorial</div> <h4 class="with-min-height">Vietnamese: Hướng dẫn kết bạn trên Gopy app</h4>
+<div class="article-info">
+Social </div>
+<p>Vietnamese:Xem hướng dẫn đăng ký kết bạn trên Gopy App tại đây.</p>
+</div>
+</a>
+</div>
+
+<div class="col-md-4 blog-tile
+            whitepapers">
+<a href="tutorial-child-3.html">
+<div class=" image-container">
+<div class="img-cover" style="background-image: url(https://www.rydoo.com/app/uploads/2020/10/1-600x400.png)"></div>
+</div>
+<div class="content">
+<div class="tag">tutorial</div> <h4 class="with-min-height"> Vietnamese: Hướng dẫn làm khảo sát trên Gopy APP</h4>
+<div class="article-info">
+Survey </div>
+<p>Vietnamese: Xem hướng dẫn làm khảo sát trên Gopy App tại đây.</p>
 </div>
 </a>
 </div> 
-<div class="col-md-4 blog-tile
-            whitepapers">
-<a href="tutorial-child.html">
-<div class=" image-container">
-<div class="img-cover" style="background-image: url(https://www.rydoo.com/app/uploads/2020/06/WP-How-your-Finance-Team-can-Lead-the-Way-out-of-Lockdown-600x400.png)"></div>
-</div>
-<div class="content">
-<div class="tag">Whitepaper</div> <h4 class="with-min-height"> How your Finance Team can lead the way out of Lockdown</h4>
-<div class="article-info">
-Business travel </div>
-<p>What have CFOs identified as the corporate priorities for the next 12 months? How can Finance ensure the business&#8217; continuity and drive the change?</p>
-</div>
-</a>
-</div> 
-<div class="col-md-4 blog-tile
-            whitepapers">
-<a href="tutorial-child.html">
-<div class=" image-container">
-<div class="img-cover" style="background-image: url(https://www.rydoo.com/app/uploads/2020/06/WP-Getting-Back-on-Board-600x400.png)"></div>
-</div>
-<div class="content">
-<div class="tag">Whitepaper</div> <h4 class="with-min-height"> Business Travel after Covid-19</h4>
-<div class="article-info">
-Business travel </div>
-<p>In this e-paper, we look at the potential impact of the coronavirus on the way we travel for work. How will attitudes to business travel change – among both employers and employees –and what new rules will we find imposed on us? How will we travel
-differently in this new world, and will we even </p>
-</div>
-</a>
-</div>  
 </div>
 </div>
 </main>
@@ -212,14 +143,14 @@ differently in this new world, and will we even </p>
 <a class="linkedin" target="_blank" href="https://www.linkedin.com/company/rydoo/"></a>
 <a class="instagram" target="_blank" href="https://www.instagram.com/rydoo/"></a>
 <a class="youtube" target="_blank" href="https://www.youtube.com/channel/UCTZYj7vm_ZcsGFL18jWHt_A"></a>
-<div><img src="https://www.rydoo.com/app/themes/rydoo/dist/images/iso-iec-certified.png" alt="bsi - ISO/IEC 27001 Information Security Management CERTIFIED" title="bsi - ISO/IEC 27001 Information Security Management CERTIFIED" style="max-width: 186px;"></div>
+<!--<div><img src="https://www.rydoo.com/app/themes/rydoo/dist/images/iso-iec-certified.png" alt="bsi - ISO/IEC 27001 Information Security Management CERTIFIED" title="bsi - ISO/IEC 27001 Information Security Management CERTIFIED" style="max-width: 186px;"></div>-->
 </div>
-</div>
+</div><!--
 <div class="col-12 col-sm-6 col-md-3 g2crowd">
 <a title="Rydoo is a leader in Enterprise Expense Management on G2" href="https://www.g2.com/products/rydoo/reviews?utm_source=rewards-badge" target="_blank"><img width="96" height="125" loading="lazy" alt="Rydoo is a leader in Enterprise Expense Management on G2" src="https://images.g2crowd.com/uploads/report_medal/image/1982/medal.svg"></a>
 &nbsp;
 <a title="Users love Rydoo on G2" href="https://www.g2.com/products/rydoo/reviews?utm_source=rewards-badge" target="_blank"><img width="96" height="125" loading="lazy" alt="Users love Rydoo on G2" src="https://my.g2.com/assets/product-badges/users-love-us-2008b519df49af90dcfa7db4b5fe13c8ec24ced0348f0a6bd039711ad8bbffc7.svg"></a>
-</div>
+</div>-->
 <div class="col-12 col-md-6">
 <nav class="nav-footer">
 <!--
@@ -248,6 +179,10 @@ differently in this new world, and will we even </p>
 </div>
 </div>
 <div class="bottom row">
+<div class="col-12 col-md-12">
+<div class="copyright">&copy; 2021 Gopy</div>
+</div>
+<!--
 <div class="col-12 col-md-8">
 <div>
 <strong>Come and say hi in one of our offices</strong><br><br>
@@ -266,6 +201,7 @@ differently in this new world, and will we even </p>
 <div class="col-12 col-md-4">
 <div class="copyright">&copy; 2021 Gopy</div>
 </div>
+-->
 </div>
 </div>
 </footer> <script src="https://code.jquery.com/jquery-3.5.0.min.js" id="jquery-js"></script>
