--- a/tutorial.html
+++ b/tutorial.html
@@ -82,46 +82,72 @@
 <div class="container resources-grid">
 <div class="row">
 
-<div class="col-md-4 blog-tile
-            whitepapers">
+<div class="col-md-4 blog-tile whitepapers">
 <a href="tutorial-child-1.html">
 <div class=" image-container">
-<div class="img-cover" style="background-image: url(https://www.rydoo.com/app/uploads/2020/10/1-600x400.png)"></div>
+<div class="img-cover" style="background-image: url(./avatar/1.png)"></div>
 </div>
 <div class="content">
-<div class="tag">tutorial</div> <h4 class="with-min-height"> Vietnamese: Hướng dẫn đăng ký tài khoản doanh nghiệp trên Gopy Portal</h4>
+<div class="tag">tutorial</div> <h4 class="with-min-height"> Vietnamese: Hướng dẫn người dùng kết bạn trên ứng dụng Gopy</h4>
 <div class="article-info">
  Sign up </div>
-<p>Vietnamese: Xem cách đăng ký tài khoản doanh nghiệp trên Gopy Portal tại đây.</p>
+<p>Vietnamese: Xem và tải tài liệu hướng dẫn tại đây.</p>
 </div>
 </a>
 </div>
 <div class="col-md-4 blog-tile whitepapers">
 <a href="tutorial-child-2.html">
 <div class=" image-container">
-<div class="img-cover" style="background-image: url(https://www.rydoo.com/app/uploads/2021/02/3-WAYS-600x400.jpg)"></div>
+<div class="img-cover" style="background-image: url(./avatar/2.png)"></div>
 </div>
 
 <div class="content">
-<div class="tag">tutorial</div> <h4 class="with-min-height">Vietnamese: Hướng dẫn kết bạn trên Gopy app</h4>
+<div class="tag">tutorial</div> <h4 class="with-min-height">Vietnamese: Hướng dẫn Doanh Nghiệp đăng ký tài khoản bản mới</h4>
 <div class="article-info">
-Social </div>
-<p>Vietnamese:Xem hướng dẫn đăng ký kết bạn trên Gopy App tại đây.</p>
+Sign up </div>
+<p>Vietnamese: Xem và tải tài liệu hướng dẫn tại đây.</p>
 </div>
 </a>
 </div>
 
-<div class="col-md-4 blog-tile
-            whitepapers">
+<div class="col-md-4 blog-tile whitepapers">
 <a href="tutorial-child-3.html">
 <div class=" image-container">
-<div class="img-cover" style="background-image: url(https://www.rydoo.com/app/uploads/2020/10/1-600x400.png)"></div>
+<div class="img-cover" style="background-image: url(./avatar/3.png)"></div>
 </div>
 <div class="content">
-<div class="tag">tutorial</div> <h4 class="with-min-height"> Vietnamese: Hướng dẫn làm khảo sát trên Gopy APP</h4>
+<div class="tag">tutorial</div> <h4 class="with-min-height"> Vietnamese: Hướng dẫn người dùng làm khảo sát BRI</h4>
 <div class="article-info">
-Survey </div>
-<p>Vietnamese: Xem hướng dẫn làm khảo sát trên Gopy App tại đây.</p>
+Sign up </div>
+<p>Vietnamese: Xem và tải tài liệu hướng dẫn tại đây.</p>
+</div>
+</a>
+</div> 
+
+<div class="col-md-4 blog-tile whitepapers">
+<a href="guide_register_company.html">
+<div class=" image-container">
+<div class="img-cover" style="background-image: url(./avatar/4.png)"></div>
+</div>
+<div class="content">
+<div class="tag">tutorial</div> <h4 class="with-min-height"> Vietnamese: Hướng dẫn đăng ký công ty trên Gopy bản cũ</h4>
+<div class="article-info">
+Sign up </div>
+<p>Vietnamese: Xem và tải tài liệu hướng dẫn tại đây.</p>
+</div>
+</a>
+</div> 
+
+<div class="col-md-4 blog-tile whitepapers">
+<a href="guide_register_survey.html">
+<div class=" image-container">
+<div class="img-cover" style="background-image: url(./avatar/5.png)"></div>
+</div>
+<div class="content">
+<div class="tag">tutorial</div> <h4 class="with-min-height"> Vietnamese: Hướng dẫn tải, đăng ký và làm khảo sát trên Gopy</h4>
+<div class="article-info">
+Sign up </div>
+<p>Vietnamese: Xem và tải tài liệu hướng dẫn tại đây.</p>
 </div>
 </a>
 </div> 
@@ -138,11 +164,13 @@ Survey </div>
 <br><br>
 <div>&nbsp;Changing the way we work</div>
 <div class="social">
+<!--
 <a class="facebook" target="_blank" href="https://www.facebook.com/Rydooapp"></a>
 <a class="twitter" target="_blank" href="https://twitter.com/rydooapp"></a>
 <a class="linkedin" target="_blank" href="https://www.linkedin.com/company/rydoo/"></a>
 <a class="instagram" target="_blank" href="https://www.instagram.com/rydoo/"></a>
 <a class="youtube" target="_blank" href="https://www.youtube.com/channel/UCTZYj7vm_ZcsGFL18jWHt_A"></a>
+-->
 <!--<div><img src="https://www.rydoo.com/app/themes/rydoo/dist/images/iso-iec-certified.png" alt="bsi - ISO/IEC 27001 Information Security Management CERTIFIED" title="bsi - ISO/IEC 27001 Information Security Management CERTIFIED" style="max-width: 186px;"></div>-->
 </div>
 </div><!--
