update community guideline

--- a/tutorial.html
+++ b/tutorial.html
@@ -53,7 +53,8 @@
 <ul id="menu-main-menu" class="nav">
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24901"><a href="index.html">Home</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="blog.html">Blog</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="tutorial.html">Tutorial</a></li>        
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="tutorial.html">Tutorial</a></li>      
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="community_guideline.html">Community Guidelines</a></li>        
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="https://portal.gopy.io/login">Login</a></li>
 </ul>
 </nav>
