--- a/blog.html
+++ b/blog.html
@@ -144,7 +144,7 @@
         </ul>
         </li> -->
         
-        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="blog.html">Blog</a></li>
+        <!-- <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="blog.html">Blog</a></li> -->
         
         <!-- <li class="preventdefault-on-mobile menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-21"><a href="https://www.rydoo.com/resources/">Resources</a>
         <ul class="sub-menu">
