--- a/index.html
+++ b/index.html
@@ -169,10 +169,12 @@
 </li> -->
           <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24901"><a
               href="index.html">Home</a></li>
-          <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="blog.html">Blog</a>
-          </li>
+          <!-- <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="blog.html">Blog</a>
+          </li> -->
           <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a
               href="tutorial.html">Tutorial</a></li>
+          <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a
+              href="data_policies.html">Data policies</a></li>
           <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a
               href="community_guideline.html">Community Guidelines</a></li>
           <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a
@@ -1077,7 +1079,8 @@ Effective report visualizations
                                         <option value="1001"
                                           data-reactid=".hbspt-forms-0.1:$2.1:$numemployees.$numemployees.0.1:$1001">
                                           5000 and above</option>
-                                      </select></div>
+                                      </select>
+                                    </div>
                                   </div>
                                 </fieldset>
                                 <fieldset class="form-columns-2" data-reactid=".hbspt-forms-0.1:$3">
@@ -1204,7 +1207,8 @@ Effective report visualizations
                                         <option value="Other"
                                           data-reactid=".hbspt-forms-0.1:$3.1:$how_would_you_define_yourself_.$how_would_you_define_yourself_.0.1:$Other">
                                           Other</option>
-                                      </select></div>
+                                      </select>
+                                    </div>
                                   </div>
                                 </fieldset>
                                 <fieldset class="form-columns-1" data-reactid=".hbspt-forms-0.1:$4">
@@ -1288,7 +1292,8 @@ Effective report visualizations
                                                     data-reactid=".hbspt-forms-0.2.0.1:0.$LEGAL_CONSENT=1subscription_type_8522900.$LEGAL_CONSENT=1subscription_type_8522900.$LEGAL_CONSENT=1subscription_type_8522900.0.0.0.1">
                                                     <p>By checking this box I agree to:</p><span
                                                       class="hs-form-required">*</span>
-                                                  </span></label></li>
+                                                  </span></label>
+                                              </li>
                                             </ul>
                                           </div>
                                         </div>
