--- a/community_guideline.html
+++ b/community_guideline.html
@@ -84,6 +84,35 @@
             display: flex;
         }
 
+        @media only screen and (max-width:500px) {
+
+            /* For mobile phones: */
+            .content-body {
+                display: block;
+            }
+            .left-menu {
+                height: 100%;
+                min-width: 100%;
+            }
+        }
+
+
+        #myBtn {
+            display: none;
+            position: fixed;
+            bottom: 20px;
+            right: 30px;
+            z-index: 99;
+            font-size: 18px;
+            border: none;
+            outline: none;
+            background-color: red;
+            color: white;
+            cursor: pointer;
+            padding: 15px;
+            border-radius: 4px;
+        }
+
         /* #sidebar-nav.sticky {
             
         } */
@@ -124,7 +153,7 @@
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a
                             href="data_policies.html">Data policies</a></li>
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a
-                        href="community_guideline.html">Community Guidelines</a></li>
+                            href="community_guideline.html">Community Guidelines</a></li>
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a
                             href="https://portal.gopy.io/login">Login</a></li>
                 </ul>
@@ -256,6 +285,7 @@
 
                         </div>
                         <div id="right-body">
+                            <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
                             <div id="introduction">
                                 <h3>Introduction</h3>
                                 <p>Every day, people use GOPY to share their stories, observe the community through the
@@ -2068,16 +2098,41 @@
         id="sage/jquery.event.move.js-js"></script>
     <script src="./app/themes/rydoo/resources/assets/scripts/lib/jquery.twentytwenty.js"
         id="sage/jquery.twentytwenty.js-js"></script>
+
+    <script>
+        //Get the button
+        var mybutton = document.getElementById("myBtn");
+
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function () { scrollFunction() };
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
+            }
+        }
+
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
+    </script>
+
     <script>
         var $sidebar = $('#sidebar-nav');
 
         var sidebarTop = $sidebar.position().top;
 
         var blogHeight = $('#content-body').outerHeight() - 10;
+        var width = $(window).width();
 
-        // Add the function below to the scroll event
-        $(window).scroll(fixSidebarOnScroll);
-
+        if (width > 500) {
+            // Add the function below to the scroll event
+            $(window).scroll(fixSidebarOnScroll);
+        }
         // On window scroll, this fn is called (binded above)
         function fixSidebarOnScroll() {
             // Cache our scroll top position (our current scroll position)
