--- a/data_policies.html
+++ b/data_policies.html
@@ -87,6 +87,35 @@
         /* #sidebar-nav.sticky {
             
         } */
+
+        #myBtn {
+            display: none;
+            position: fixed;
+            bottom: 20px;
+            right: 30px;
+            z-index: 99;
+            font-size: 18px;
+            border: none;
+            outline: none;
+            background-color: red;
+            color: white;
+            cursor: pointer;
+            padding: 15px;
+            border-radius: 4px;
+        }
+
+        @media only screen and (max-width:500px) {
+
+            /* For mobile phones: */
+            .content-body {
+                display: block;
+            }
+
+            .left-menu {
+                height: 100%;
+                min-width: 100%;
+            }
+        }
     </style>
     <script>
 
@@ -200,6 +229,8 @@
 
                         </div>
                         <div id="right-body">
+                            <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+
                             <h3 id="introduction">1. Introduction</h3>
                             <p>The role of GOPY Platform is to support the commissioning of SOCIAL DIALONGES
                                 includes and subjects to Corporate Social Responsibility (CSR) and related fields,
@@ -566,8 +597,12 @@
         var blogHeight = $('#content-body').outerHeight() - 10;
 
         // Add the function below to the scroll event
-        $(window).scroll(fixSidebarOnScroll);
+        var width = $(window).width();
 
+        if (width > 500) {
+            // Add the function below to the scroll event
+            $(window).scroll(fixSidebarOnScroll);
+        }
         // On window scroll, this fn is called (binded above)
         function fixSidebarOnScroll() {
             // Cache our scroll top position (our current scroll position)
@@ -582,6 +617,27 @@
             else if (windowScrollTop >= sidebarTop) {
                 $sidebar.css("margin-top", `${windowScrollTop - sidebarTop + 110}px`);
             }
+        }
+    </script>
+    <script>
+        //Get the button
+        var mybutton = document.getElementById("myBtn");
+
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function () { scrollFunction() };
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
+            }
+        }
+
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
         }
     </script>
 </body>
